--- a/style.css
+++ b/style.css
@@ -42,8 +42,149 @@ background: #E55473;
 width: 500px;
 height: 600px;
 /* padding: 0px 240px 4017px 1045px; */
-position: fixed;
+position: absolute;
 top: 50px;
 right: 240px;
 }
 /* <!-- End os Banner section --> */
+/* <!-- start of Our Featured Flowers section --> */
+/* .featured-text{
+    text-align: center;
+}
+.featured-heading{
+    font-size: 50px;
+    padding-top: 100px;
+    padding-bottom: 10px;
+}
+.featured-line{
+    width: 500px;
+    padding-left: 700px;
+    color: rgb(114, 105, 105);
+}
+.featured-image{
+    display: flex;
+    width: 310px;
+height: 428px;
+flex-shrink: 0;
+gap: 300px;
+}
+.featured-img-style{
+    width: 310px;
+    height: 428px;
+    flex-shrink: 0; 
+} */
+.second-width{
+    margin: 0 auto;
+    text-align: center;
+    }
+.second-width h1{
+    font-family: 'Bebas Neue', cursive;
+    padding-top: 140px;
+}
+.dream{
+    font-size: 40px;
+    color:rgb(14, 2, 4);
+}
+.first-box{
+  background: #ed99cd;
+  width: 310px;
+  height: 428px;
+  border-radius: 300px 300px 0px 0px;
+  padding: 25px;
+    margin: auto;
+    text-align:center;
+    text-decoration: underline;
+background: rgba(167, 33, 98, 0.15);
+}
+.second-box{
+      background: #ed99cd;
+      width: 310px;
+      height: 428px;
+      border-radius: 300px 300px 0px 0px;
+      padding: 25px;
+    margin: auto;
+    text-align:center;
+    text-decoration: underline;
+background: rgba(5, 151, 160, 0.15);
+    }
+    .third-box{
+        background: #ed99cd;
+        width: 310px;
+        height: 428px;
+        padding: 25px;
+    margin: auto;
+    text-align:center;
+    text-decoration: underline;
+    border-radius: 300px 300px 0px 0px;
+    background: rgba(71, 125, 17, 0.15);
+    }
+    .first-box img{
+        width: 310px;
+        height: 428px;
+        margin: auto;
+        display: block;
+          
+    }
+    .second-box img{
+        width: 310px;
+height: 428px;
+        margin: auto;
+        display: block;
+          
+    }
+    .third-box img{
+        width: 310px;
+        height: 428px;
+        margin: auto;
+        display: block;
+}
+.featured{
+    display: flex;
+}
+.featured-line{
+width: 594px;
+text-align: center;
+flex-shrink: 0;
+color: rgba(39, 39, 39, 0.60);
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+padding-left: 700px ;
+padding-bottom: 30px;
+}
+/* <!-- start of footer --> */
+.footer-section{
+    background-color: black;
+    width: 1922px;
+height: 350px;
+flex-shrink: 0;
+text-align: center;
+padding-top: 130px;
+}
+.footer-flower{
+    color: #E55473;
+}
+.footer-heading{
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-size: 50px;
+}
+.footer-paragraph {
+    color: white;
+    padding: 10px;
+    width: 500px;
+    text-align: center;
+    padding-left: 700px;
+}
+.footer-copyright{
+    color: rgba(138, 130, 130, 0.73);
+    padding: 10px;
+    text-align: center;
+
+
+}
+
+/* <!-- End of footer --> */
