--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ height: 600px;
 /* padding: 0px 240px 4017px 1045px; */
 position: absolute;
 top: 50px;
-right: 240px;
+right: 100px;
 }
 /* <!-- End os Banner section --> */
 /* <!-- start of Our Featured Flowers section --> */
@@ -140,6 +140,7 @@ height: 428px;
 }
 .featured{
     display: flex;
+    
 }
 .featured-line{
 width: 594px;
@@ -151,17 +152,67 @@ font-size: 18px;
 font-style: normal;
 font-weight: 400;
 line-height: 30px;
-padding-left: 700px ;
+padding-left: 490px ;
 padding-bottom: 30px;
 }
+/* <!-- start Hot deals section --> */
+.hot-deals{
+    background-color: #d2bac9;
+    display: flex;
+    width: 1922px;
+    height: 500px;
+    margin-top: 100px;
+
+}
+.hot-deals-div{
+    text-align: center;
+    padding: 200px 150px;
+}
+.hot-deals-heading{
+    color: #272727;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.hot-deals-cc{
+    color: red;
+}
+.hot-deals-paragraph{
+    color: rgba(39, 39, 39, 0.60);
+text-align: center;
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+width: 500px;
+}
+.hot-deeals-button{
+    display: inline-flex;
+padding: 20px 43px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 8px;
+background: #E55473;
+color: white;
+}
+.hot-deals-img{
+    width: 250px;
+height: 300px;
+padding: 100px 100px;
+}
+/* <!-- end Hot deals section --> */
 /* <!-- start of footer --> */
 .footer-section{
     background-color: black;
+    margin-top: 100px;
     width: 1922px;
-height: 350px;
+height: 200px;
 flex-shrink: 0;
 text-align: center;
-padding-top: 130px;
+padding-top: 100px;
 }
 .footer-flower{
     color: #E55473;
@@ -169,7 +220,7 @@ padding-top: 130px;
 .footer-heading{
     color: white;
     padding: 10px;
-    text-align: center;
+    padding-right: 490px;
     font-size: 50px;
 }
 .footer-paragraph {
@@ -177,14 +228,13 @@ padding-top: 130px;
     padding: 10px;
     width: 500px;
     text-align: center;
-    padding-left: 700px;
+    padding-left: 500px;
 }
 .footer-copyright{
     color: rgba(138, 130, 130, 0.73);
     padding: 10px;
     text-align: center;
-
-
+    padding-right: 450px;
 }
 
 /* <!-- End of footer --> */
