--- a/style.css
+++ b/style.css
@@ -204,6 +204,37 @@ height: 300px;
 padding: 100px 100px;
 }
 /* <!-- end Hot deals section --> */
+/* Start of instagram section */
+.instagram{
+    margin-top: 100px;
+    text-align: center;
+}
+.instagram-div{
+    /* text-align: center; */
+margin-bottom: 30px;
+text-align: center;
+}
+.instagram-name{
+    color: #272727;
+text-align: center;
+font-family: Lato;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+.instagram-paragraph{
+    width: 594px;
+    padding-left: 490px;
+    color: rgba(39, 39, 39, 0.60);
+font-family: Lato;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+}
+
+/* end of instagram section */
 /* <!-- start of footer --> */
 .footer-section{
     background-color: black;
@@ -235,6 +266,12 @@ padding-top: 100px;
     padding: 10px;
     text-align: center;
     padding-right: 450px;
+}
+.instagram-img{
+    width: 300px;
+height: 400px;
+flex-shrink: 0;
+gap: 50px;
 }
 
 /* <!-- End of footer --> */
